prepared base endpoints to develop fix documentation
