# src/utils/interfaces/cartCheckoutRequest.ts
@@ -1,0 +1,6 @@
+interface ICartCheckoutRequest {
+    ecommerce_id: string
+    customer_id: string
+}
+
+export default ICartCheckoutRequest;
