# src/utils/interfaces/cartRequest.ts
@@ -1,0 +1,6 @@
+interface ICartRequest {
+    ecommerce_id: string
+    customer_id: string
+}
+
+export default ICartRequest;
