# src/utils/interfaces/newCartRequest.ts
@@ -1,0 +1,7 @@
+
+interface ICartCreateRequest {
+    ecommerce_id: string
+    customer_id: string
+}
+
+export default ICartCreateRequest;
