# src/utils/interfaces/newCartResponse.ts
@@ -1,0 +1,11 @@
+import { Status } from "utils/enums";
+
+interface INewCartResponse {
+    ecommerce_id: string
+    customer_id: string
+    created_at: Date
+    updated_at: Date
+    status: Status
+}
+
+export default INewCartResponse;
